feat: upgrade to Kestra 0.21, the platform, the annotation processor