@@ -1,21 +1,21 @@
 package io.kestra.plugin.templates;
 
-import com.google.common.collect.ImmutableMap;
 import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.property.Property;
-import org.apache.commons.lang3.StringUtils;
-import org.junit.jupiter.api.Test;
 import io.kestra.core.runners.RunContext;
 import io.kestra.core.runners.RunContextFactory;
-
 import jakarta.inject.Inject;
+import org.apache.commons.lang3.StringUtils;
+import org.junit.jupiter.api.Test;
+
+import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
 /**
- * This test will only test the main task, this allows you to send any input
- * parameters to your task and test the returning behavior easily.
+ * This test will only test the main task, this allow you to send any input
+ * parameters to your task and test the returning behaviour easily.
  */
 @KestraTest
 class ExampleTest {
@@ -24,10 +24,10 @@ class ExampleTest {
 
     @Test
     void run() throws Exception {
-        RunContext runContext = runContextFactory.of(ImmutableMap.of("variable", "John Doe"));
+        RunContext runContext = runContextFactory.of(Map.of("variable", "John Doe"));
 
         Example task = Example.builder()
-            .format(Property.of("Hello {{ variable }}"))
+            .format(new Property<>("Hello {{ variable }}"))
             .build();
 
         Example.Output runOutput = task.run(runContext);
